@@ -108,30 +108,29 @@
 		 * @private
 		 */
 		decodeFilterConfigurationObject: function (filterConfigurationObject) {
-			filterConfigurationObject = Ext.isArray(filterConfigurationObject) && !Ext.isEmpty(filterConfigurationObject) ? filterConfigurationObject[0] : filterConfigurationObject;
-
-			if (Ext.isObject(filterConfigurationObject) && !Ext.Object.isEmpty(filterConfigurationObject)) {
+			if (Ext.isArray(filterConfigurationObject) && !Ext.isEmpty(filterConfigurationObject))
 				Ext.Array.each(filterConfigurationObject, function (configurationObject, i, allConfigurationObjects) {
-					var domainRecord = null;
+					if (Ext.isObject(configurationObject) && !Ext.Object.isEmpty(configurationObject)) {
+						var domainRecord = null;
 
-					var recordIndex = this.controllerGridDomain.getView().getStore().findBy(function (record) {
-						return (
-							record.get([CMDBuild.core.constants.Proxy.DOMAIN, CMDBuild.core.constants.Proxy.NAME]) == configurationObject[CMDBuild.core.constants.Proxy.DOMAIN]
-							&& record.get(CMDBuild.core.constants.Proxy.DIRECTION) == configurationObject[CMDBuild.core.constants.Proxy.DIRECTION]
-						);
-					});
+						var recordIndex = this.controllerGridDomain.getView().getStore().findBy(function (record) {
+							return (
+								record.get([CMDBuild.core.constants.Proxy.DOMAIN, CMDBuild.core.constants.Proxy.NAME]) == configurationObject[CMDBuild.core.constants.Proxy.DOMAIN]
+								&& record.get(CMDBuild.core.constants.Proxy.DIRECTION) == configurationObject[CMDBuild.core.constants.Proxy.DIRECTION]
+							);
+						});
 
-					if (recordIndex >= 0)
-						domainRecord = this.controllerGridDomain.getView().getStore().getAt(recordIndex);
+						if (recordIndex >= 0)
+							domainRecord = this.controllerGridDomain.getView().getStore().getAt(recordIndex);
 
-					if (!Ext.isEmpty(domainRecord)) {
-						domainRecord.setType(configurationObject[CMDBuild.core.constants.Proxy.TYPE]);
+						if (!Ext.isEmpty(domainRecord)) {
+							domainRecord.setType(configurationObject[CMDBuild.core.constants.Proxy.TYPE]);
 
-						if (Ext.isArray(configurationObject[CMDBuild.core.constants.Proxy.CARDS]) && !Ext.isEmpty(configurationObject[CMDBuild.core.constants.Proxy.CARDS]))
-							domainRecord.set(CMDBuild.core.constants.Proxy.CHECKED_CARDS, configurationObject[CMDBuild.core.constants.Proxy.CARDS]);
+							if (Ext.isArray(configurationObject[CMDBuild.core.constants.Proxy.CARDS]) && !Ext.isEmpty(configurationObject[CMDBuild.core.constants.Proxy.CARDS]))
+								domainRecord.set(CMDBuild.core.constants.Proxy.CHECKED_CARDS, configurationObject[CMDBuild.core.constants.Proxy.CARDS]);
+						}
 					}
 				}, this);
-			}
 		},
 
 		/**
@@ -140,19 +139,18 @@
 		 * @returns {Void}
 		 */
 		panelGridAndFormFilterAdvancedFilterEditorRelationsSelectionManage: function () {
-			if (!this.cmfg('panelGridAndFormFilterAdvancedManagerSelectedFilterIsEmpty')) {
-				var filterConfigurationObject = this.cmfg('panelGridAndFormFilterAdvancedManagerSelectedFilterGet', CMDBuild.core.constants.Proxy.CONFIGURATION);
+			// Error handling
+				if (this.cmfg('panelGridAndFormFilterAdvancedEntryTypeIsEmpty'))
+					return _error('panelGridAndFormFilterAdvancedFilterEditorRelationsSelectionManage(): selected filter is empty', this, this.cmfg('panelGridAndFormFilterAdvancedManagerSelectedFilterGet'));
+			// END: Error handling
 
-				if (
-					!this.cmfg('panelGridAndFormFilterAdvancedManagerSelectedFilterIsEmpty', CMDBuild.core.constants.Proxy.CONFIGURATION)
-					&& !this.cmfg('panelGridAndFormFilterAdvancedManagerSelectedFilterIsEmpty', [CMDBuild.core.constants.Proxy.CONFIGURATION, CMDBuild.core.constants.Proxy.RELATION])
-				) {
-					this.decodeFilterConfigurationObject(
-						this.cmfg('panelGridAndFormFilterAdvancedManagerSelectedFilterGet', [CMDBuild.core.constants.Proxy.CONFIGURATION, CMDBuild.core.constants.Proxy.RELATION])
-					);
-				}
-			} else {
-				_error('panelGridAndFormFilterAdvancedFilterEditorRelationsSelectionManage(): selected filter is empty', this, this.cmfg('panelGridAndFormFilterAdvancedManagerSelectedFilterGet'));
+			if (
+				!this.cmfg('panelGridAndFormFilterAdvancedManagerSelectedFilterIsEmpty', CMDBuild.core.constants.Proxy.CONFIGURATION)
+				&& !this.cmfg('panelGridAndFormFilterAdvancedManagerSelectedFilterIsEmpty', [CMDBuild.core.constants.Proxy.CONFIGURATION, CMDBuild.core.constants.Proxy.RELATION])
+			) {
+				this.decodeFilterConfigurationObject(
+					this.cmfg('panelGridAndFormFilterAdvancedManagerSelectedFilterGet', [CMDBuild.core.constants.Proxy.CONFIGURATION, CMDBuild.core.constants.Proxy.RELATION])
+				);
 			}
 		},
 
